--- a/codewell-fe/package.json
+++ b/codewell-fe/package.json
@@ -5,7 +5,6 @@
   "proxy": "http://localhost:2323",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.2.0",
     "i18next": "^19.4.4",
@@ -37,5 +36,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react": "^9.5.0"
   }
 }
