--- a/codewell-fe/package.json
+++ b/codewell-fe/package.json
@@ -10,6 +10,7 @@
     "i18next": "^19.4.4",
     "i18next-http-backend": "^1.0.8",
     "i18next-xhr-backend": "^3.2.2",
+    "monaco-editor": "^0.20.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-i18next": "^11.4.0",
